--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,6 @@ spring.application.name=SA2Gemini
 spring.datasource.url=jdbc:postgresql://localhost:5432/SA2_BD
 spring.datasource.username=postgres
 spring.datasource.password=123
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
