--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,10 @@ spring.datasource.password=123
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.devtools.restart.enabled=true
+spring.devtools.restart.poll-interval=1000
+spring.devtools.restart.quiet-period=500
+spring.devtools.livereload.enabled=true
+spring.thymeleaf.cache=false
+spring.thymeleaf.check-template-location=true
+spring.web.resources.cache.period=0
