--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -10,21 +10,26 @@ server.port=${PORT:8080}
 # ============================================
 # BASE DE DATOS - PostgreSQL
 # ============================================
-# Railway provee PGHOST, PGPORT, PGDATABASE, PGUSER, PGPASSWORD
-# Construimos la URL JDBC a partir de estas variables
-spring.datasource.url=jdbc:postgresql://${PGHOST:localhost}:${PGPORT:5432}/${PGDATABASE:SA2_BD}
-spring.datasource.username=${PGUSER:postgres}
-spring.datasource.password=${PGPASSWORD:}
+# Railway provee estas variables automáticamente cuando vinculas PostgreSQL:
+# - PGHOST, PGPORT, PGDATABASE, PGUSER, PGPASSWORD
+# 
+# IMPORTANTE: Asegúrate de que estas variables estén configuradas en Railway
+# Ve a tu servicio -> Variables -> Add Reference Variable -> selecciona las de Postgres
+spring.datasource.url=jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}
+spring.datasource.username=${PGUSER}
+spring.datasource.password=${PGPASSWORD}
 
 # Configuración de Hibernate para producción
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 
-# Pool de conexiones
-spring.datasource.hikari.maximum-pool-size=5
-spring.datasource.hikari.minimum-idle=2
-spring.datasource.hikari.connection-timeout=20000
+# Pool de conexiones - optimizado para tier gratuito
+spring.datasource.hikari.maximum-pool-size=3
+spring.datasource.hikari.minimum-idle=1
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.idle-timeout=600000
+spring.datasource.hikari.max-lifetime=1800000
 
 # ============================================
 # THYMELEAF - Producción
@@ -40,11 +45,12 @@ spring.web.resources.chain.strategy.content.enabled=true
 spring.web.resources.chain.strategy.content.paths=/**
 
 # ============================================
-# LOGGING
+# LOGGING - Temporalmente en INFO para debug
 # ============================================
-logging.level.root=WARN
+logging.level.root=INFO
 logging.level.com.example.SA2Gemini=INFO
-logging.level.org.springframework.security=WARN
+logging.level.org.springframework.security=INFO
+logging.level.org.springframework.boot=INFO
 
 # ============================================
 # SEGURIDAD ADICIONAL
