No me ejecutaba, le faltaba una anotacion noma.
Tambien estuve probando hostearlo con el port Forwarding, funciono

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,3 +36,7 @@ spring.devtools.livereload.enabled=true
 spring.thymeleaf.cache=false
 spring.thymeleaf.check-template-location=true
 spring.web.resources.cache.period=0
+
+
+
+server.forward-headers-strategy=framework
