--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -40,7 +40,7 @@ spring.thymeleaf.check-template-location=true
 # ============================================
 # RECURSOS ESTÁTICOS
 # ============================================
-spring.web.resources.cache.period=31536000
+spring.web.resources.cache.period=0
 spring.web.resources.chain.strategy.content.enabled=true
 spring.web.resources.chain.strategy.content.paths=/**
 
