Pongo el spring.jpa.hibernate.ddl-auto=create para liampiar toda la base de datos antes de la presentacion, hope i dont brak anything

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -21,7 +21,7 @@ spring.datasource.password=${PGPASSWORD}
 
 # Configuración de Hibernate para producción
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=false
 
 # Pool de conexiones - optimizado para tier gratuito
