--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,12 +19,12 @@ spring.datasource.password=123
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # IMPORTANTE: 'create' borra la BD cada vez. Usar 'update' para persistir datos
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update 
 spring.jpa.show-sql=true
 
-# ============================================
+# 
 # DEVTOOLS - Solo para desarrollo
-# ============================================
+# 
 spring.devtools.restart.enabled=true
 spring.devtools.restart.poll-interval=1000
 spring.devtools.restart.quiet-period=500
